--- a/NUMPY/day_1.ipynb
+++ b/NUMPY/day_1.ipynb
@@ -6,7 +6,7 @@
       "name": "day_1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNapm5+ydlXk+xjPhO8TwPE",
+      "authorship_tag": "ABX9TyNftGtKXyY6UhzxI+6CwMgO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dragoon-dranzer/Data_Science/blob/main/NUMPY/day_1\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dragoon-dranzer/Data_Science/blob/main/NUMPY/day_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,9 +31,9 @@
         "id": "VZJz3djww8B1"
       },
       "source": [
-        ""
+        "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     }
   ]
