--- a/NUMPY/project_on_logistic_regression.ipynb
+++ b/NUMPY/project_on_logistic_regression.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled5.ipynb",
+      "name": "project_on_logistic_regression.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNapm5+ydlXk+xjPhO8TwPE",
+      "authorship_tag": "ABX9TyM9D+fxRr/yfaVIjEJD1Aa+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "u9WZovXstdDD"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "import pandas as pd"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YQwmkypouZ25"
       },
       "source": [
         ""
